Added checks for gcc and make to the Ruby on Rails script installers (needed to compile the MySQL driver), and make checking for commands by scripts more generic.
Added a restriction to the Edit Owner Limits page to prevent the creation of catchall email aliases.
Added fields to the autoreply section of the alias and user email forwarding pages to limit the date range on which replies are sent.
Added a Module Config option to delete aliases when email is disabled for a domain.
---- Changes since 3.44 ----
Updated phpBB script installer to allow a choice of the 3.0 and 2.0 versions.
Updated the Drupal script installer to versions 5.2 and 4.7.7, DokuWiki to 2007-06-26b, WordPress to 2.2.2, WebCalendar to 1.1.3, and PHP-Nuke to 8.0.
Added an option on the Edit Owner Limits page to prevent use of the HTML editor.
Added a script installer for the PostNuke CMS.
AWstats statistics are now included in cPanel migrations.
The real name of a virtual server's Unix user is updated when the server's description is changed.
Added a link from the Mail Aliases page to manually edit aliases in a domain using a text box. This makes bulk changes and copies simpler.
Removed the batch alias creation page, as it has be superceded by manual alias management.
Migrated cPanel users with forwarding have email also delivered to their inbox, to maintain consistency with cPanel.
Added a script installer for the Movable Type blogging platform.
When an existing database is imported to a virtual server, the MySQL or PostgreSQL permissions to it are properly granted. Similarly, when a database is dis-associated, permissions to it and directory group permissions are properly removed.
In the Server Templates section, separate template php.ini files can be specified for PHP versions 4 and 5.
Added --alias, --toplevel, --subserver and --subdomain parameters to list-domains.pl to limit output.