@@ -885,6 +885,8 @@ edit_backupdesc=Backup just this virtual server to a local or remote file.
 edit_backupdesc2=Backup just this virtual server to a remote FTP or SSH server.
 edit_restore=Restore Virtual Server
 edit_restoredesc=Restore just this virtual server from a local or remote file.
+edit_exclude=Excluded Directories
+edit_excludedesc=Specify directories that will not be included in backups of this virtual server.
 edit_reemail=Re-Send Signup Email
 edit_reemaildesc=Re-send the email message sent when this server was created to $1.
 edit_newip=Change IP Address
@@ -1507,6 +1509,7 @@ log_limits_domain=Changed owner limits for server $1
 log_pass_domain=Changed password for server $1
 log_newip_domain=Changed IP address for server $1
 log_style_domain=Applied new website content style to server $1
+log_exclude_domain=Updated excluded backup directories for server $1
 log_check=Re-checked configuration
 log_newweb=Updated new website template
 log_newuser=Updated new mailbox email template
@@ -3585,3 +3588,11 @@ aedit_doing=Updating email aliases ..
 aedit_complete=.. done ($1 created, $3 modified, $4 deleted, $2 errors).
 aedit_etwice=An alias with the same name is listed more than once
 aedit_eauto=Automatic replies cannot be setup when manually editing aliases
+
+exclude_title=Excluded Directories
+exclude_header=Backup exclusion options
+exclude_dirs=Directories under home to skip
+exclude_desc=By default, Virtualmin will include all data in a servers's home directory when making a backup. However, if a virtual server has files that are too large to include or are backed up via some other method, this page can be used to exclude them from backups.
+exclude_err=Failed to save excluded directories
+exclude_eabs=Directory '$1' cannot be an absolute path
+exclude_edot=Directory '$1' cannot contain ..
