@@ -692,3 +692,5 @@ Added a script installer for the Movable Type blogging platform.
 When an existing database is imported to a virtual server, the MySQL or PostgreSQL permissions to it are properly granted. Similarly, when a database is dis-associated, permissions to it and directory group permissions are properly removed.
 In the Server Templates section, separate template php.ini files can be specified for PHP versions 4 and 5.
 Added --alias, --toplevel, --subserver and --subdomain parameters to list-domains.pl to limit output.
+Added the Excluded Directories page for entering directories not to include in backups for a virtual server.
+Updated the modify-domain.pl script to allow excluded directories to be managed with the --add-exclude and --remove-exclude parameters. Also updated list-domains.pl to show exclusions.
